# weight_raft

./: .gitignore  BUILD.gn  CMakeLists.txt  bundle.json  clang-format.sh  client_main.cpp  compile_protos.sh  run_server.sh  server_main.cpp  start.sh
include/: server.h  utils.h  weight_raft.h
include/weight_raft/: server.h  utils.h  weight_raft.h
src/: server.cpp  service.proto  utils.cpp  weight_raft.cpp
