import("//build/ohos.gni")

config("weight_raft_headers") {
  include_dirs = [
    "include",
    "//third_party/json/include",
  ]
}

ohos_shared_library("weight_raft") {
  sources = [
    "src/server.cpp",
    "src/service.pb.cc",
    "src/utils.cpp",
    "src/weight_raft.cpp",
  ]
  include_dirs = [
    "include",
    "//third_party/json/include",
  ]
  public_configs = [ ":weight_raft_headers" ]
  public_deps = [
    "//third_party/braft:braft",
    "//third_party/brpc:brpc",
  ]
  use_rtti = true
  use_exceptions = true
  part_name = "weight_raft"
  install_enable = true
}

ohos_executable("weight_raft_client") {
  sources = [ "client_main.cpp" ]
  include_dirs = [ "include" ]
  deps = [ ":weight_raft" ]
  use_rtti = true
  use_exceptions = true
  part_name = "weight_raft"
  install_enable = true
}

ohos_executable("weight_raft_server") {
  sources = [ "server_main.cpp" ]
  include_dirs = [ "include" ]
  deps = [ ":weight_raft" ]
  use_rtti = true
  use_exceptions = true
  part_name = "weight_raft"
  install_enable = true
}
